# winteros_week3

./: README.md
erc_ros2_navigation/: CMakeLists.txt  package.xml
erc_ros2_navigation/config/: slam_toolbox_localization.yaml
erc_ros2_navigation/launch/: check_urdf.launch.py  spawn_robot.launch.py  world.launch.py
erc_ros2_navigation/urdf/: erc_bot.gazebo  erc_bot.urdf
erc_ros2_navigation_py/: package.xml  setup.cfg  setup.py
erc_ros2_navigation_py/erc_ros2_navigation_py/: slam_toolbox_load_map.py
erc_trajectory_server/: package.xml  setup.cfg  setup.py
erc_trajectory_server/erc_trajectory_server/: trajectory.py
