<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>erc_ros2_navigation</name>
  <version>1.0.0</version>
  <description>Using slam, localization and navigation with Gazebo Harmonic and ROS Jazzy for ERC ROS2 course</description>
  <maintainer email="sagarv812@gmail.com">ERC IITB</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
